--- a/config/template_newrelic_plugin.yml
+++ b/config/template_newrelic_plugin.yml
@@ -39,6 +39,8 @@ agents:
     # Set "debug: true" to see additional debug output
     # Note: This logs the metrics locally and does not send data to new relic.
     #debug: false
+    # Set the plugin name explicitly to override the default of host name parsed from the api URL
+    #plugin_name: "RabbitMQ Plugin"
 
 # Configuration for vFabric Web Server/mod_bmx
   httpd_mod_bmx:
